
[workspace]
members = ["contracts/*"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0"
cosmwasm-schema = "1.3"
cosmwasm-std =  { version = "1.3", features = ["staking", "cosmwasm_1_3"] }
cosmwasm-storage = "1.3"
cw-storage-plus = "1.1"
cw-utils = "1.0"
cw2 = "1.1"
cw4 = "1.1"
cw20-base = { version = "1.1", features = ["library"] }
cw20 = "1.1"
cw-multi-test = "0.16"
schemars = "0.8"
serde = { version = "1.0", default-features = false, features = ["derive"] }
thiserror = { version = "1.0" }


[profile.release]
codegen-units = 1
incremental = false
rpath            = false
lto              = true
overflow-checks  = true
opt-level        = 3
debug            = false
debug-assertions = false
panic = 'abort'